<resources>

    <string name="app_name">BMI计算器</string>

    <!--Main-->
    <string name="hight">身高：</string>
    <string name="weight">体重：</string>
    <string name="enter">确定</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings Titles -->
    <string name="me">账号</string>
    <string name="about">关于我们</string>

    <!-- Me Preferences -->
    <string name="user_name">昵称</string>
    <string name="signature">个性签名</string>

    <!-- About Preferences -->
    <string name="auto_update">自动更新</string>
    <string name="update_off">开启以自动下载更新</string>
    <string name="stop_update">关闭以停止自动下载</string>

    <string name="night_title">夜间安装更新</string>
    <string name="night_summary_off">开启以只在夜间安装</string>
    <string name="night_summary_on">关闭以实时安装</string>
    <string name="Feedback">意见反馈</string>
    <string name="Bug_feedback">BUG反馈</string>
    <string name="go_feedback">前往GitHub开源库对我APP提出建议</string>
    <string name="feed_BUG">前往GitHub开源库反馈BUG</string>


</resources>