<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_baseline_system_update_alt_24"
        app:key="@string/auto_update"
        app:summaryOff="@string/update_off"
        app:summaryOn="@string/stop_update"
        app:title="@string/auto_update" />

    <SwitchPreferenceCompat
        app:dependency="@string/auto_update"
        app:icon="@drawable/ic_baseline_nights_stay_24"
        app:key="@string/night_title"
        app:summaryOff="@string/night_summary_off"
        app:summaryOn="@string/night_summary_on"
        app:title="@string/night_title" />

    <Preference
        android:icon="@drawable/ic_baseline_us_24"
        app:key="@string/Feedback"
        app:summary="@string/go_feedback"
        app:title="@string/Feedback" />

    <Preference
        android:icon="@drawable/ic_baseline_bug_report_24"
        app:key="@string/Bug_feedback"
        app:summary="@string/feed_BUG"
        app:title="@string/Bug_feedback" />

</PreferenceScreen>